# Alarm

./: .gitignore  README.md
back/alarm/: CMakeLists.txt  Makefile  README.md  cmd_example  partitions_example.csv  sdkconfig
back/alarm/main/: Authorization.c  CMakeLists.txt  audio_setup.c  ds1302.c  main.c  rest_server.c  sntp_server_time.c  telegram_bot.c
back/alarm/main/include/: Authorization.h  sntp_server_time.h
front/alarm/: .gitignore  README.md  index.html  package-lock.json  package.json
front/alarm/src/: App.vue
front/alarm/src/assets/: base.css  main.css
front/alarm/src/components/: Call.vue  CallList.vue  Event.vue  Guid.vue  GuidItem.vue  HelloWorld.vue  Navbar.vue  Session.vue  Voice.vue
front/alarm/src/router/: index.js
front/alarm/src/views/: AboutView.vue  AdminView.vue  CallListView.vue  HomeView.vue  MainView.vue  SettingView.vue  SignInView.vue
